@@ -2,6 +2,7 @@ package learning_jdk.stream;
 
 import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 public class Java8FlatMap {
@@ -16,7 +17,7 @@ public class Java8FlatMap {
         List<String[]> a = Arrays.stream(words)
                 .map(word -> word.split(""))
                 .distinct()
-                .toList();
+                .collect(Collectors.toList());
         a.forEach(System.out::println);
         // 这个实现方式是由问题的，
         // 传递给map方法的lambda为每个单词生成了一个String[](String列表)。
@@ -31,14 +32,14 @@ public class Java8FlatMap {
         Stream<String> stream1 = Arrays.stream(words);
         Stream<String[]> stream2 = stream1.map(word -> word.split(""));
         Stream<String> stream3 = stream2.flatMap(arr->Arrays.stream(arr));
-        List<String> a = stream3.distinct().toList();
+        List<String> a = stream3.distinct().collect(Collectors.toList());
         System.out.println(a);
         
         List<String> b = Arrays.stream(words)
                 .map(word -> word.split(""))
                 .flatMap(Arrays::stream) // public static Stream<String> stream(String[] array)
                 .distinct()
-                .toList();
+                .collect(Collectors.toList());
         System.out.println(b);
         // 使用flatMap方法的效果是，各个数组并不是分别映射一个流，而是映射成流的内容，
         // 所有使用map(Array::stream)时生成的单个流被合并起来，即扁平化为一个流。
