@@ -2,6 +2,7 @@ package learning_jdk.stream;
 
 import java.util.List;
 import java.util.concurrent.atomic.AtomicBoolean;
+import java.util.stream.Collectors;
 
 public class StreamTakeWhileTest {
 
@@ -25,14 +26,14 @@ public class StreamTakeWhileTest {
                 catchNumber.set(true);
                 return false;
             }
-        }).toList();
+        }).collect(Collectors.toList());
         System.out.println(result); // [1, 3]
     }
 
     public static void afterJava9() {
         List<Integer> numbers = List.of(1, 3, 6, 2, 4);
         // 取出所有小于5的数字，遇到>=5就停止
-        List<Integer> result = numbers.stream().takeWhile(n -> n < 5).toList();
+        List<Integer> result = numbers.stream().takeWhile(n -> n < 5).collect(Collectors.toList());
         System.out.println(result); // [1, 3]
     }
 }
